# artemis

./: .gitattributes  .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  Launch Artemis.cmd  PROJECT.md  README.md  REQUIREMENTS.md  ROADMAP.md  pyproject.toml
archive/v1/: ROADMAP.md
client/: .gitignore  eslint.config.mjs  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  domains.ts  main.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: auth.rs  error.rs  gateway.rs  lib.rs  main.rs  state.rs
client/src-tauri/tauri-plugin-keystore/: Cargo.toml  build.rs
client/src-tauri/tauri-plugin-keystore/permissions/: default.toml
client/src-tauri/tauri-plugin-keystore/permissions/autogenerated/: reference.md
client/src-tauri/tauri-plugin-keystore/permissions/autogenerated/commands/: create_key.toml  destroy_key.toml  has_key.toml
client/src-tauri/tauri-plugin-keystore/permissions/schemas/: schema.json
client/src-tauri/tauri-plugin-keystore/src/: commands.rs  counter.rs  error.rs  lib.rs  macos.rs  sig.rs  windows.rs
config/: .env.dev.example  .env.prod.example  .env.uat.example  policy.example.json  roles.toml
docs/: status.md
docs/archive/: status-v1.md
docs/briefs/: CAL-a-read-findtime-prefs-sync.md  CAL-b-write-gating-activitylog.md  CAL-c-overlay-hooks.md  CAL-d-knowledge-memory-untrusted.md  CAL-shared.md
docs/bring-up/: BRING-UP-RUNBOOK.md  CODEX-BUILD-RUNBOOK.md  DEV-MODEL-STACK.md  PRE-ARRIVAL-PREP.md  SECRETS-INVENTORY.md
docs/changes/: AGENT-coder-router.md  AGENT-coder.md  AGENT-rung01.md  AGENT-rung2.md  AGENT-spine.md  BUILD-ORDER.md  CAL-a-read-findtime-prefs-sync.md  CAL-b-write-gating-activitylog.md  CAL-c-overlay-hooks.md  CAL-create-from-extract.md  CAL-d-knowledge-memory-untrusted.md  CLIENT-a-app-auth-core.md  CLIENT-auth.md  CLIENT-b-app-endpoints.md  CLIENT-broker-pair-ipc.md  CLIENT-c-artemiskit.md  CLIENT-d-app-shell.md  CLIENT-e-screens.md  CLIENT-f-mac-app.md  DR-a-untrusted-content-security.md  DR-b-web-access.md  DR-c-deep-research-engine.md  FIN-b-email-extraction.md  FIN-c-recurring-reconciliation-hooks.md  GATE-a-action-staging.md  GATE-b-action-review-surface.md  GATE-b-client.md  M0-a-foundation-layout.md  M0-b-launchd-services.md  M0-c-mlx-server.md  M0-d-ports-scaffolding.md  M0-e-isolation-backup.md  M0-f-env-injection.md  M1-a-manifest-registry.md  M1-b-router-brain.md  M1-c-gateway-surfaces.md  M1-d-time-tool-heartbeat.md  M2-a-key-broker.md  M2-b-scope-model-and-wall.md  M2-c-broker-client-tier0-launchd.md  (+93 more)
docs/design/: holo-color-schemes.html  keys-panel-mock.html  seasonal-time-schemes.html  summon-panel-mockup.html  theme-tuner.html
docs/drafts/: AGENT-authority.md  AGENT-checkpoint.md  AGENT-coder-router.md  AGENT-coder.md  AGENT-engine-design.md  AGENT-inbox.md  AGENT-rung01.md  AGENT-rung2.md  AGENT-spine.md  AGENT-types.md  R1-reactions-compose.md  R2-reactions-emit-seams.md  R3-linked-task-ref.md  R4-memory-module-fact-gift.md  R4a-telegram-ingress-router.md  R4b-bless-invoke-gate.md  R4c-desktop-bless-ui.md  agentic-fork-decisions-brief.md  architecture-validation-reservations.md  cb5b-1-capability-metadata.md  cb5b-2-map-nodes-ui.md  cb5b-3-refresh-backend.md  cb5b-4-refresh-ui.md  client-detail-action-wiring.md  enabler-sandbox-DESIGN-BRIEF.md  oauth-1-broker-core.md  oauth-2-connect-routes.md  oauth-3-invoke-integration.md  oauth-4-client-ui.md  prebuild-test-review.md  proactive-heartbeat-module-wiring.md  reactions-compose-DISCUSSION.md  tauri-client-spec-rewrite.md
docs/findings/: 2026-06-20-reaction-wiring-audit.md  agentic-computer-use-harness-discussion.md  agentic-runtime-design-decisions.md  cb5b-display-prior-art-2026-07-01.md  (+38 more)
scripts/: dev_chat.py  launch-artemis.ps1  run_brain.py  setup_data_dir.sh  setup_tailscale_serve.sh
tests/: eval_research.py  test_action_staging.py  test_agency_internal_task_schedule.py  test_agent_authority.py  test_agent_checkpoint.py  test_agent_coder.py  test_agent_coder_router.py  test_agent_escalation.py  test_agent_executor.py  test_agent_inbox.py  test_agent_loop.py  test_agent_rung2.py  test_agent_rungs.py  test_agent_stop_discipline.py  test_agent_types.py  test_agentic.py  test_api.py  test_api_app.py  test_api_ask.py  test_api_auth.py  test_api_capabilities.py  test_api_domains.py  test_api_layout.py  test_app.py  test_app_auth.py  test_ask_loop.py  test_auth_contract_conformance.py  test_brain_routing.py  test_brain_runtime.py  test_broker_client.py  test_calendar_create_from_extract.py  test_calendar_integration.py  test_calendar_overlay_hooks.py  test_calendar_prefs_workingdays.py  test_calendar_read.py  test_calendar_write.py  test_capability_select.py  test_capability_store.py  test_checkpoint.py  test_citation_check.py  (+111 more)
tools/distill/: pyproject.toml
tools/distill/distill/: categories.py  judge.py  output.py  pipeline.py  teacher.py
tools/distill/tests/: test_pipeline.py
(+1137 files in other folders)
