[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "artemis"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = ["jsonschema>=4", "pydantic>=2", "pyyaml>=6", "anthropic>=0.40", "httpx>=0.27"]

[dependency-groups]
dev = ["mypy", "ruff", "pytest", "pytest-asyncio", "types-PyYAML"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
files = ["src", "tests"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
