[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "artemis"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = ["jsonschema>=4", "pydantic>=2", "pyyaml>=6", "anthropic>=0.40", "httpx>=0.27", "croniter>=2"]

[dependency-groups]
dev = ["mypy", "ruff", "pytest", "pytest-asyncio", "types-PyYAML", "types-croniter"]
memory = ["cognee>=1.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["cognee.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
