[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "artemis"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = ["jsonschema>=4", "pydantic>=2", "pyyaml>=6", "anthropic>=0.40", "httpx>=0.27", "croniter>=2", "fastapi>=0.115", "uvicorn>=0.30", "cryptography>=42", "trafilatura>=1.12", "tldextract>=5.1"]

[project.scripts]
artemis = "artemis.app:main"

[dependency-groups]
dev = ["mypy", "ruff", "pytest", "pytest-asyncio", "types-PyYAML", "types-croniter", "pip-audit"]
memory = ["cognee>=1.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["cognee.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
# Forge-generated / sandboxed capability code is not project source — never lint it.
# `.forge-test` = throwaway forge runs; `capabilities` = the runtime data-root store dir.
extend-exclude = [".forge-test", "capabilities"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
