[package]
name = "artemis-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["test"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
zeroize = "1"

[dev-dependencies]
wiremock = "0.6"
