[project]
name = "artemis-distill"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "tenacity>=8",
]

[project.scripts]
distill = "distill.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "ruff",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["distill"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
