[package]
name = "tauri-plugin-keystore"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-keystore"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
ecdsa = { version = "0.16", features = ["der"] }
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2" }
thiserror = "2"
zeroize = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Security_Cryptography",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-security = "0.3"
security-framework = "3"
